test/build/probe.c
#line 1 "probe.C"

/* <<AT&T C++ Language System <3.0.3> 05/05/94>> */
char __cfront_version_303_xxxxxxxx;
/* < probe.C > */

#line 1 "probe.C"
void *__vec_new (void *, int , int , void *);

#line 1 "probe.C"
void __vec_delete (void *, int , int , void *, int , int );
typedef int (*__vptp)(void);
struct __mptr {short d; short i; __vptp f; };

#line 1 "probe.C"
extern struct __mptr* __ptbl_vec__probe_C_[];

#line 1 "probe.C"

/* the end */
